--- a/fpl/data/fuzzy_match_overrides.yml
+++ b/fpl/data/fuzzy_match_overrides.yml
@@ -1,30 +1,42 @@
-Diogo Jota: Diogo Teixeira da Silva
 Adrián: Adrián San Miguel del Castillo
 Allan: Allan Marques Loureiro
 Angeliño: José Ángel Esmorís Tasende
-Bernardo: Bernardo Fernandes da Silva Junior
+Bénie Adama Traore: Bénie Traoré
+Benson Manuel: Manuel Benson Hedilazio
 Bernardo Silva: Bernardo Veiga de Carvalho e Silva
+Bernardo: Bernardo Fernandes da Silva Junior
+Beto: Norberto Bercique Gomes Betuncal
 Bruno Fernandes: Bruno Borges Fernandes
 Bruno: Bruno Saltor Grau
-Bryan: None
+Bryan: null
 Cafú: Carlos Ribeiro Dias
+Chiquinho: Francisco Jorge Tomás Oliveira
+Cucho: Juan Camilo Hernández Suárez
 Danny Drinkwater: Daniel Drinkwater
-Datro Fofana: None
+Datro Fofana: null
 Diego Costa: Diego Da Silva Costa
+Diogo Jota: Diogo Teixeira da Silva
 Fabinho: Fabio Henrique Tavares
 Fabio Carvalho: Fábio Freitas Gouveia Carvalho
 Fabio Vieira: Fábio Ferreira Vieira
 Fábio: Fabio Pereira da Silva
 Fernandinho: Fernando Luiz Rosa
+Francisco Trincão: Francisco Machado Mota de Castro Trincão
 Fred: Frederico Rodrigues de Paula Santos
 Gabriel Dos Santos: Gabriel dos Santos Magalhães
 Gabriel Jesus: Gabriel Fernando de Jesus
+Gabriel Paulista: Gabriel Armando de Abreu
 Gedson Fernandes: Gedson Carvalho Fernandes
 Hamed Junior Traorè: Hamed Traorè
+Jeremy Doku: Jérémy Doku
 João Gomes: João Victor Gomes da Silva
 João Pedro: João Pedro Junqueira de Jesus
+Jon Rowe: Jonathan Rowe
+Jonny Castro: Jonathan Castro Otto
 Jorginho: Jorge Luiz Frello Filho
+José Sá: José Malheiro de Sá
 Jota: José Ignacio Peleteiro Romallo
+Julio César Enciso: Julio Enciso
 Lucas Moura: Lucas Rodrigues Moura da Silva
 Lucas Paquetá: Lucas Tolentino Coelho de Lima
 Marquinhos: Marcus Oliveira Alencar
@@ -36,7 +48,7 @@ Pedro: Pedro Rodríguez Ledesma
 Pepe Reina: José Reina
 Raphinha: Raphael Dias Belloli
 Ricardo Pereira: Ricardo Barbosa Pereira
-Robert Sanchez: None
+Robert Sanchez: null
 Roberto: Roberto Jimenez Gago
 Rodri: Rodrigo Hernandez
 Rodrigo: Rodrigo Moreno
@@ -44,29 +56,17 @@ Rúben Dias: Rúben Gato Alves Dias
 Rúben Neves: Rúben da Silva Neves
 Rúben Vinagre: Rúben Nascimento Vinagre
 Rui Patrício: Rui Pedro dos Santos Patrício
+Ryan John Giles: Ryan Giles
 Samir Santos: Samir Caetano de Souza Santos
 Tetê: Mateus Cardoso Lemos Martins
 Thiago Alcántara: Thiago Alcántara do Nascimento
 Thiago Silva: Thiago Emiliano da Silva
-Thomas Doyle: None
+Thomas Doyle: null
 Toti Gomes: Toti António Gomes
 Trézéguet: Mahmoud Ahmed Ibrahim Hassan
-Valery: None
+Valery: null
+Vinicius Souza: Vini de Souza Costa
 Vitinha: Vitor Ferreira
+Vitinho: Victor da Silva
 William Thomas Fish: William Fish
 Xande Silva: Alexandre Nascimento Costa Silva
-Gabriel Paulista: Gabriel Armando de Abreu
-Jon Rowe: Jonathan Rowe
-Jonny Castro: Jonathan Castro Otto
-Francisco Trincão: Francisco Machado Mota de Castro Trincão
-Chiquinho: Francisco Jorge Tomás Oliveira
-Cucho: Juan Camilo Hernández Suárez
-José Sá: José Malheiro de Sá
-Bénie Adama Traore: Bénie Traoré
-Ryan John Giles: Ryan Giles
-Vitinho: Victor da Silva
-Julio César Enciso: Julio Enciso
-Jeremy Doku: Jérémy Doku
-Benson Manuel: Manuel Benson Hedilazio
-Beto: Norberto Bercique Gomes Betuncal
-Vinicius Souza: Vini de Souza Costa
