--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -115,40 +115,8 @@ data:
   home_away_weight: 0.5
   start_year: 2016-2017
   holdout_year: 2022-2023
+  test_sampling: True
   ma_lag: 5
-  ma_features:
-    - team_ga
-    - team_gf
-    - min
-    - gls
-    - ast
-    - pk
-    - pkatt
-    - sh
-    - sot
-    - touches
-    - xg
-    - npxg
-    - xag
-    - sca
-    - gca
-    - sota
-    - ga
-    - saves
-    - savepct
-    - cs
-    - psxg
-    - team_poss
-    - team_xg
-    - team_xga
-    - value
-    - att_total
-    - home_att_total
-    - away_att_total
-    - def_total
-    - home_def_total
-    - away_def_total
-    - fpl_points
 
 ######################################
 
