--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -116,8 +116,8 @@ data:
   start_year: 2016-2017
   holdout_year: 2022-2023
   ma_lag: 5
-  debug_run: True
-  use_cache: True
+  debug_run: False
+  use_cache: False
 
 ######################################
 
