feature selection and cross validation

--- a/fpl/conf/base/catalog.yml
+++ b/fpl/conf/base/catalog.yml
@@ -107,6 +107,10 @@ FEATURE_SELECTION_PLOTS:
   type: matplotlib.MatplotlibWriter
   filepath: data/preprocess
 
+PCA_ELBOW_METHOD_OUTPUT:
+  type: matplotlib.MatplotlibWriter
+  filepath: data/preprocess
+
 PYCARET_RESULT:
   type: pandas.SQLTableDataSet
   table_name: pycaret_result
