--- a/fpl/src/fpl/pipelines/model_pipeline/all_models/regression_param_ranges.yml
+++ b/fpl/src/fpl/pipelines/model_pipeline/all_models/regression_param_ranges.yml
@@ -86,7 +86,7 @@ lr_params:
     method: choice
     values: [True, False]
 
-light_gbm_params:
+lightgbm_params:
   num_leaves:
     method: uniform
     scope: int
