--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -91,7 +91,7 @@ model:
     alpha: 9.99
 
   lr_params:
-    fit_intercept: True
+    fit_intercept: False
 
   lightgbm_params:
     num_leaves: 31
@@ -123,7 +123,7 @@ model:
 hyperopt:
   target:
     name: val_score
-    max_trials: 50
+    max_trials: 100
     strategy: max
     algo: tpe
     early_termination: null
@@ -133,8 +133,8 @@ hyperopt:
         # - [lr]
         - [ridge]
         - [huber]
-        # - [lightgbm]
-        # - [gbr]
+        - [lightgbm]
+        - [gbr]
   # 0:
   #   model:
   #     lr_params:
@@ -165,92 +165,92 @@ hyperopt:
         fit_intercept:
           method: choice
           values: [True, False]
-  # 2:
-  #   model:
-  #     lightgbm_params:
-  #       num_leaves:
-  #         method: uniform
-  #         scope: int
-  #         low: 2
-  #         high: 256
-  #       learning_rate:
-  #         method: loguniform
-  #         low: 0.000001
-  #         high: 0.5
-  #       n_estimators:
-  #         method: uniform
-  #         scope: int
-  #         low: 10
-  #         high: 300
-  #       min_split_gain:
-  #         method: uniform
-  #         low: 0
-  #         high: 1
-  #       reg_alpha:
-  #         method: loguniform
-  #         low: 0.0000000001
-  #         high: 10
-  #       reg_lambda:
-  #         method: loguniform
-  #         low: 0.0000000001
-  #         high: 10
-  #       feature_fraction:
-  #         method: uniform
-  #         low: 0.4
-  #         high: 1
-  #       bagging_fraction:
-  #         method: uniform
-  #         low: 0.4
-  #         high: 1
-  #       bagging_freq:
-  #         method: uniform
-  #         scope: int
-  #         low: 0
-  #         high: 7
-  #       min_child_samples:
-  #         method: uniform
-  #         scope: int
-  #         low: 1
-  #         high: 100
-  # 3:
-  #   model:
-  #     gbr_params:
-  #       n_estimators:
-  #         method: uniform
-  #         scope: int
-  #         low: 10
-  #         high: 300
-  #       learning_rate:
-  #         method: loguniform
-  #         low: -6
-  #         high: -0.69
-  #       subsample:
-  #         method: uniform
-  #         low: 0.2
-  #         high: 1
-  #       min_samples_split:
-  #         method: uniform
-  #         scope: int
-  #         low: 2
-  #         high: 10
-  #       min_samples_leaf:
-  #         method: uniform
-  #         scope: int
-  #         low: 1
-  #         high: 5
-  #       max_depth:
-  #         method: uniform
-  #         scope: int
-  #         low: 1
-  #         high: 11
-  #       max_features:
-  #         method: uniform
-  #         low: 0.4
-  #         high: 1
-  #       min_impurity_decrease:
-  #         method: loguniform
-  #         low: -9
-  #         high: -0.69
+  2:
+    model:
+      lightgbm_params:
+        num_leaves:
+          method: uniform
+          scope: int
+          low: 2
+          high: 256
+        learning_rate:
+          method: loguniform
+          low: 0.000001
+          high: 0.5
+        n_estimators:
+          method: uniform
+          scope: int
+          low: 10
+          high: 300
+        min_split_gain:
+          method: uniform
+          low: 0
+          high: 1
+        reg_alpha:
+          method: loguniform
+          low: 0.0000000001
+          high: 10
+        reg_lambda:
+          method: loguniform
+          low: 0.0000000001
+          high: 10
+        feature_fraction:
+          method: uniform
+          low: 0.4
+          high: 1
+        bagging_fraction:
+          method: uniform
+          low: 0.4
+          high: 1
+        bagging_freq:
+          method: uniform
+          scope: int
+          low: 0
+          high: 7
+        min_child_samples:
+          method: uniform
+          scope: int
+          low: 1
+          high: 100
+  3:
+    model:
+      gbr_params:
+        n_estimators:
+          method: uniform
+          scope: int
+          low: 10
+          high: 300
+        learning_rate:
+          method: loguniform
+          low: -6
+          high: -0.69
+        subsample:
+          method: uniform
+          low: 0.2
+          high: 1
+        min_samples_split:
+          method: uniform
+          scope: int
+          low: 2
+          high: 10
+        min_samples_leaf:
+          method: uniform
+          scope: int
+          low: 1
+          high: 5
+        max_depth:
+          method: uniform
+          scope: int
+          low: 1
+          high: 11
+        max_features:
+          method: uniform
+          low: 0.4
+          high: 1
+        min_impurity_decrease:
+          method: loguniform
+          low: -9
+          high: -0.69
 
 ######################################
 
@@ -266,8 +266,8 @@ data:
 ######################################
 
 housekeeping:
-  to_keep: 30
-  keep_model_best: 3
+  to_keep: 50
+  keep_model_best: 5
   metric: val_r2
   strategy: max
 
