--- a/fpl/src/fpl/pipelines/model_pipeline/all_models/regression_param_ranges.yml
+++ b/fpl/src/fpl/pipelines/model_pipeline/all_models/regression_param_ranges.yml
@@ -29,8 +29,8 @@ gbr_params:
     high: 300
   learning_rate:
     method: loguniform
-    low: -6
-    high: -0.69
+    low: 0.000001
+    high: 0.5
   subsample:
     method: uniform
     low: 0.2
@@ -56,8 +56,8 @@ gbr_params:
     high: 1
   min_impurity_decrease:
     method: loguniform
-    low: -9
-    high: -0.69
+    low: 0.000000001
+    high: 0.5
 
 huber_params:
   epsilon:
@@ -161,3 +161,53 @@ et_params:
     method: loguniform
     min: 0.000000001
     max: 0.5
+
+xgboost_params:
+  n_estimators:
+    method: uniform
+    scope: int
+    low: 10
+    high: 300
+  learning_rate:
+    method: loguniform
+    low: -6
+    high: -0.69
+  learning_rate: 
+    method: loguniform
+    low: 0.000001
+    high: 0.5
+  n_estimators: 
+    method: uniform
+    scope: int
+    low: 10
+    high: 300
+  subsample: 
+    method: uniform
+    low: 0.2
+    high: 1
+  max_depth: 
+    method: uniform
+    scope: int
+    low: 1
+    high: 11
+  colsample_bytree: 
+    method: uniform
+    low: 0.5
+    high: 1
+  min_child_weight: 
+    method: uniform
+    scope: int
+    low: 1
+    high: 4
+  reg_alpha: 
+    method: uniform
+    low: 0.0000000001
+    high: 10
+  reg_lambda: 
+    method: uniform
+    low: 0.0000000001
+    high: 10
+  scale_pos_weight: 
+    method: uniform
+    low: 1
+    high: 50
