--- a/data/preprocess/fbref2fpl_player_mapping.yml
+++ b/data/preprocess/fbref2fpl_player_mapping.yml
@@ -70,3 +70,4 @@ Vitinha: Vitor Ferreira
 Vitinho: Victor da Silva
 William Thomas Fish: William Fish
 Xande Silva: Alexandre Nascimento Costa Silva
+Gabriel Martinelli: Gabriel Martinelli Silva
