player mapping remove season

--- a/data/preprocess/player_mapping/fbref2fpl_player_overrides.yml
+++ b/data/preprocess/player_mapping/fbref2fpl_player_overrides.yml
@@ -8,12 +8,10 @@ Bernardo: Bernardo Fernandes da Silva Junior
 Beto: Norberto Bercique Gomes Betuncal
 Bruno Fernandes: Bruno Borges Fernandes
 Bruno: Bruno Saltor Grau
-Bryan: null
 Cafú: Carlos Ribeiro Dias
 Chiquinho: Francisco Jorge Tomás Oliveira
 Cucho: Juan Camilo Hernández Suárez
 Danny Drinkwater: Daniel Drinkwater
-Datro Fofana: null
 Diego Costa: Diego Da Silva Costa
 Diogo Jota: Diogo Teixeira da Silva
 Fabinho: Fabio Henrique Tavares
@@ -48,7 +46,6 @@ Pedro: Pedro Rodríguez Ledesma
 Pepe Reina: José Reina
 Raphinha: Raphael Dias Belloli
 Ricardo Pereira: Ricardo Barbosa Pereira
-Robert Sanchez: null
 Roberto: Roberto Jimenez Gago
 Rodri: Rodrigo Hernandez
 Rodrigo: Rodrigo Moreno
@@ -61,13 +58,16 @@ Samir Santos: Samir Caetano de Souza Santos
 Tetê: Mateus Cardoso Lemos Martins
 Thiago Alcántara: Thiago Alcántara do Nascimento
 Thiago Silva: Thiago Emiliano da Silva
-Thomas Doyle: null
 Toti Gomes: Toti António Gomes
 Trézéguet: Mahmoud Ahmed Ibrahim Hassan
-Valery: null
 Vinicius Souza: Vini de Souza Costa
 Vitinha: Vitor Ferreira
 Vitinho: Victor da Silva
 William Thomas Fish: William Fish
 Xande Silva: Alexandre Nascimento Costa Silva
 Gabriel Martinelli: Gabriel Martinelli Silva
+José Izquierdo: José Heriberto Izquierdo Mena
+Felipe: Felipe Augusto de Almeida Monteiro
+Felipe Anderson: Felipe Anderson Pereira Gomes
+Allan Nyom: Allan-Roméo Nyom
+Allan: Marques Loureiro
