--- a/data/preprocess/player_mapping/old2new_fpl_player_overrides.yml
+++ b/data/preprocess/player_mapping/old2new_fpl_player_overrides.yml
@@ -5,3 +5,10 @@ Diogo Jota: Diogo Teixeira da Silva
 Bernardo Mota Veiga de Carvalho e Silva: Bernardo Veiga de Carvalho e Silva
 Gabriel Magalhães: Gabriel dos Santos Magalhães
 Rúben Santos Gato Alves Dias: Rúben Gato Alves Dias
+Rúben Diogo da Silva Neves: Rúben da Silva Neves
+Thiago Thiago: Thiago Alcántara do Nascimento
+Ricardo Domingos Barbosa Pereira: Ricardo Barbosa Pereira
+Bamidele Alli: Dele Alli
+Fabio Carvalho: Fábio Freitas Gouveia Carvalho
+Rúben Gonçalo Silva Nascimento Vinagre: Rúben Nascimento Vinagre
+Matthew James: Matty James
