update player name mapping

--- a/data/preprocess/player_mapping/fbref2fpl_player_overrides.yml
+++ b/data/preprocess/player_mapping/fbref2fpl_player_overrides.yml
@@ -71,3 +71,6 @@ Felipe: Felipe Augusto de Almeida Monteiro
 Felipe Anderson: Felipe Anderson Pereira Gomes
 Allan Nyom: Allan-Roméo Nyom
 Allan: Marques Loureiro
+David de Gea: David De Gea Quintana
+Ben White: Benjamin White
+Bobby Reid: Bobby De Cordova-Reid
