--- a/data/preprocess/player_mapping/old2new_fpl_player_overrides.yml
+++ b/data/preprocess/player_mapping/old2new_fpl_player_overrides.yml
@@ -12,3 +12,24 @@ Bamidele Alli: Dele Alli
 Fabio Carvalho: Fábio Freitas Gouveia Carvalho
 Rúben Gonçalo Silva Nascimento Vinagre: Rúben Nascimento Vinagre
 Matthew James: Matty James
+Aleksandar Mitrovic: Aleksandar Mitrović
+Heung-Min Son: Son Heung-min
+David De Gea: David De Gea Quintana
+David de Gea: David De Gea Quintana
+Johann Berg Gudmundsson: Jóhann Berg Gudmundsson
+Solomon March: Solly March
+Joseph Gomez: Joe Gomez
+Ben White: Benjamin White
+Vladimir Coufal: Vladimír Coufal
+Emiliano Martínez: Emiliano Martínez Romero
+Andreas Pereira: Andreas Hoelgebaum Pereira
+Matthew Cash: Matty Cash
+Miguel Almirón: Miguel Almirón Rejala
+Willian Borges Da Silva: Willian Borges da Silva
+Joseph Willock: Joe Willock
+Bobby Decordova-Reid: Bobby De Cordova-Reid
+Asmir Begovic: Asmir Begović
+Jefferson Lerma: Jefferson Lerma Solís
+Aleksandar Mitrovic: Aleksandar Mitrović
+Moisés Caicedo: Moisés Caicedo Corozo
+Rayan Ait Nouri: Rayan Aït-Nouri
