align fpl player names

--- a/data/preprocess/fbref2fpl_player_overrides.yml
+++ b/data/preprocess/fbref2fpl_player_overrides.yml
@@ -74,3 +74,13 @@ Allan: Marques Loureiro
 David de Gea: David De Gea Quintana
 Ben White: Benjamin White
 Bobby Reid: Bobby De Cordova-Reid
+Emerson: Emerson Leite de Souza Junior
+Danilo: 
+  - [94b2001f, Danilo Luiz da Silva]
+  - [a816dbfb, Danilo dos Santos de Oliveira]
+Aaron Ramsey:
+  - [e1618c22, Aaron James Ramsey]
+  - [a816dbfb, Aaron Ramsey]
+Danny Ward:
+  - [cfb29823, Daniel Carl Ward]
+  - [d3ce0e89, Danny Ward]
